--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
       <div class="row padding">
         <div class="col-md-6">
           <div class="card">
-            <a href="https://effiongoto.github.io/bootstrap/" target="_blank"><img class="card-img-top" src="images/2.png"></a>
+            <a href="https://effiongoto.github.io/portfolio-concept/" target="_blank"><img class="card-img-top" src="images/2.png"></a>
             <div class="card-body">
               <p class="card-text">Portfolio home page made with HTML & CSS</p>
-              <a href="https://effiongoto.github.io/bootstrap/" target="_blank" class="btn btn-primary stretched-link">View website</a>
+              <a href="https://effiongoto.github.io/portfolio-concept//" target="_blank" class="btn btn-primary stretched-link">View website</a>
             </div>
           </div>
         </div>
       
         <div class="col-md-6">
           <div class="card">
-            <a href="https://effiongoto.github.io/portfolio-concept/" target="_blank"><img class="card-img-top" src="images/1.png"></a>
+            <a href="https://effiongoto.github.io/bootstrap/" target="_blank"><img class="card-img-top" src="images/1.png"></a>
             <div class="card-body">
               <p class="card-text">Bootstrap concept website made with HTML, CSS & (you guessed it) Bootstrap.</p>
-              <a href="https://effiongoto.github.io/portfolio-concept/" target="_blank" class="btn btn-primary stretched-link">View website</a>
+              <a href="https://effiongoto.github.io/bootstrap/" target="_blank" class="btn btn-primary stretched-link">View website</a>
             </div>
           </div>
         </div>
@@ -172,7 +172,7 @@
     <div class="container-fluid text-center" id="contact">
       <h2 class="padding">Need a responsive, mobile-ready website?</h2>
       <h2 class="padding"><span>Let's work together!</span></h2>
-      <a id="email" href="mailto:effiongoto98@gmail.com" target="_blank" class="padding">effiongoto98@gmail.com</a> <br><br>
+      <a id="email" href="mailto:effiongoto98@gmail.com" target="_blank" class="email padding">effiongoto98@gmail.com</a> <br><br>
       <a href="https://www.linkedin.com/in/oto-obong-effiong-8a81151b0/" target="_blank" ><i class="fab fa-linkedin social"></i></a>
       <a href="https://twitter.com/iamoto" target="_blank" ><i class="fab fa-twitter social"></i></a>
       <a href="https://github.com/Effiongoto" target="_blank" ><i class="fab fa-github social"></i></a>
