--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="card">
             <a href="https://protected-everglades-01851.herokuapp.com/" target="_blank"><img class="card-img-top" src="images/3.png"></a>
             <div class="card-body">
-              <p class="card-text">A newsletter web application made with HTML, CSS and Node.js.</p>
+              <p class="card-text">A newsletter web application made with HTML, CSS, Node.js & the Mailchimp API.</p>
               <a href="https://protected-everglades-01851.herokuapp.com/" target="_blank" class="btn btn-primary stretched-link">View website</a>
             </div>
           </div>
